HelloUltraviolet/Fixtures/RejectedSource/FFI/UnsupportedLibraryKind/Expected.uv
//! Expected diagnostic metadata for the UnsupportedLibraryKind rejected-source specimen.

expectedDiagnostic("E-SYS-3346", "requirement.23.UnsupportedLibraryKindIllFormed")
